--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,11 +1,11 @@
 ---
-title: "Page Not Found"
+title: "Page Not Found2"
 excerpt: "Page not found2. Your pixels are in another canvas."
 sitemap: false
 permalink: /404.html
 ---
 
-Sorry, but the page you were trying to view does not exist --- perhaps you can try searching for it below.
+Sorry2, but the page you were trying to view does not exist --- perhaps you can try searching for it below.
 
 <script type="text/javascript">
   var GOOG_FIXURL_LANG = 'en';
