--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -1,21 +1,10 @@
 ---
-title: 'Blog Post number 1'
+title: 'Android Widget To grab Data From Any Given Url'
 comments: true
-date: 2012-08-14
-permalink: /posts/2012/08/blog-post-1/
+date: 2018-09-30
+permalink: /posts/2018/09/Android Widget To grab Data From Any Given Url
 tags:
-  - cool posts
-  - category1
-  - category2
+  - Android
+  - Widget
 ---
 
-This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
-
-Headings are cool
-======
-
-You can have many headings
-======
-
-Aren't headings cool?
-------
