first blog post

--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -7,4 +7,4 @@ tags:
   - Android
   - Widget
 ---
-
+Android: Widgets are awesome, but if you're keeping your eye on a service or web site that doesn't have a widget in the Play Store, you can make your own with This Widget.
