first blog post

--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -1,5 +1,5 @@
 ---
-title: 'Android Widget To grab Data From Any Given Url'
+title: 'Android Widget To grab Data From Any Given Url Usint Regx'
 comments: true
 date: 2018-09-30
 permalink: /posts/2018/09/Android Widget To grab Data From Any Given Url
