first blog post

--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -1,10 +1,15 @@
 ---
-title: 'Android Widget To grab Data From Any Given Url Usint Regx'
 comments: true
 date: 2018-09-30
 permalink: /posts/2018/09/Android Widget To grab Data From Any Given Url
+title: 'Android Widget To grab Data From Any Given Url Using Regx'
 tags:
   - Android
   - Widget
 ---
 Android: Widgets are awesome, but if you're keeping your eye on a service or web site that doesn't have a widget in the Play Store, you can make your own with This Widget.
+
+
+Features:
+Select Data Using Regx
+User-Defined Update Inteval
