--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -11,5 +11,8 @@ Android: Widgets are awesome, but if you're keeping your eye on a service or web
 
 
 Features:
-Select Data Using Regx
+======
+Select Data Using Regx<br>
+======
 User-Defined Update Inteval
+======
