--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -10,11 +10,11 @@ tags:
 Android: Widgets are awesome, but if you're keeping your eye on a service or web site that doesn't have a widget in the Play Store, you can make your own with This Widget.
 
 
-Features:
+*Features:
 ======
 
-Select Data Using Regx<br>
+-Select Data Using Regx<br>
 ====
 
-User-Defined Update Inteval
++User-Defined Update Inteval
 ====
