--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -12,4 +12,4 @@ Android: Widgets are awesome, but if you're keeping your eye on a service or web
 
 *Features:
 -Select Data Using Regx<br>
-+User-Defined Update Inteval
+-User-Defined Update Inteval
