--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -10,6 +10,6 @@ tags:
 Android: Widgets are awesome, but if you're keeping your eye on a service or web site that doesn't have a widget in the Play Store, you can make your own with This Widget.
 
 
-+ Features:
-	- Select Data Using Regx
++ Features
+	- Select Data Using Regex
 	- User-Defined Update Inteval
