--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -1,8 +1,8 @@
 ---
 comments: true
 date: 2018-09-30
-permalink: /posts/2018/09/Android Widget To grab Data From Any Given Url
-title: 'Android Widget To grab Data From Any Given Url Using Regex'
+permalink: /posts/2018/09/Android Widget To grab Data From Any Given URL Using Regex
+title: 'Android Widget To Grab Data From Any Given URL Using Regex'
 tags:
   - Android
   - Widget
@@ -11,5 +11,5 @@ Android: Widgets are awesome
 
 
 * Features
-	* Select Data Using Regex
-	* User-Defined Update Inteval
+  * Select Data Using Regex
+  * User-Defined Update Inteval
